$Id$

2007-04-22 Roy Hills <Roy.Hills@nta-monitor.com>

	* utils.c: New function "dupstr", which is a local implementation
	  of the common but non-standard library function "strdup".

	* ike-scan.c: Replace calls to malloc/strcpy with calls to the
	  new dupstr function.  This makes the code tidier and also reduces
	  the number of calls to the potentially dangerour strcpy function.

2007-04-17 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.h: Undefined SYSLOG, as we don't use this any more, and I
	  doubt that anyone else needs it.  The syslog functionality may be
	  removed in a future release.

2007-04-13 Roy Hills <Roy.Hills@nta-monitor.com>

        * configure.ac: Added checks for strlcat and strlcpy, with
          replacement functions using the OpenBSD implementations if they are
          not present.

        * strlcat.c, strlcpy.c: New source files from the OpenBSD source at
          http://www.openbsd.org/cgi-bin/cvsweb/src/lib/libc/string

2007-03-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Incremented version number to 1.9.1.

	* ike-vendor-ids, ike-backoff-patterns: various minor changes and
	  additions.

2007-01-26 Roy Hills <Roy.Hills@nta-monitor.com>

	* Released v1.9  Tarball size: 1412689, Zip size: 2260655.
	  tarball md5sum: bed63c7d2f54c482525a735be7b5e720
	  Zip md5sum: 5a224a60235189ba1b8882c98e09489c

2007-01-14 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Refactored display_packet() to ensure that payload
	  is correctly aligned.

2007-01-13 Roy Hills <Roy.Hills@nta-monitor.com>

	* check-decode: New tests for pkt-main-natt-response,
	  pkt-aggr-cert-response, pkt-v2-notify-response and
	  pkt-checkpoint-notify.

	* check-packet: New test for pkt-single-trans.

	* ike-scan.c: Added conditional code to write received IKE packet to
	  a file.  This is used to create data files for use with check-decode,
	  and is not intended for production use.

	* psk-crack.h: Include <sys/time.h> and <time.h>.
